* implementation the background changing animation for overall background of website *  implementation height limit to all on all containers to stop overflowing of content

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
 body{
 	margin: 0;
 	cursor:url("https://raw.githubusercontent.com/mphomolefe730/portfolio-website/refs/heads/main/src/assets/icons/cursor.png"), auto;
-	/*background-color: rgba(240, 244, 249, 1);*/
+	background-repeat: no-repeat; 
+	background-size: cover;
 	font-family: 'Roboto', 'system-ui';
+	overflow-x: hidden;
+	scrollbar-width: thin;
+	height: 100svh;
+	/* background-image: linear-gradient(#ffffff, 90%, #cfd3de);*/
+	animation: backgroundChangeColors 60s ease-in-out forwards infinite; 
 }
 
 body.is-scrolling {
@@ -108,6 +118,7 @@ a:hover{
 	border: 0;
 	justify-content: center;
 	border-radius: 6px;
+	margin-top: 1rem;
 }
 
 .active1{
@@ -169,6 +180,17 @@ a:hover{
 	}
 	100% {
 		transform: rotate(360deg);
+	}
+}
+@keyframes backgroundChangeColors{
+	0%{
+		background-image: linear-gradient(#ffffff, 90%, #cfd3de);
+	}
+	50%{
+		background-image: linear-gradient(#ffffff, 90%, #43237169);
+	}
+	100%{
+		background-image: linear-gradient(#ffffff, 90%, #faae7b8f);
 	}
 }
 
